# The-Interaction-Archive-Server

./: .env  Cargo.toml  example.config.toml  flake.nix  readme.md
bruno-tia-api-testing/: Create a new connection.bru  Get all connection.bru  bruno.json
migrations/2026-04-03-163933-0000_init/: down.sql  up.sql
migrations/2026-04-07-170148-0000_v0/: down.sql  up.sql
src/: db.rs  file_handler.rs  lib.rs  main.rs  schema.rs  vars.rs
