[package]
name = "tia-server"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.3.1"
dirs = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1.2"
uuid = "1.23.0"
version-compare = "0.2.1"
