[package]
name = "tia-server"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = "0.8.8"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "serde_json"] }
diesel_migrations = "2.3.1"
dirs = "6.0.0"
once_cell = "1.21.4"
regex = "1.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tokio =  { version = "1.51.0", features = ["rt-multi-thread"] }
toml = "1.1.2"
tracing-subscriber = "0.3.23"
uuid =  { version = "1.23.0", features = ["serde", "v4"] }
